<resources>
    <string name="title_filters">Filters</string>
    <string name="title_list_room">List room</string>
    <string name="title_edit_room">Edit room</string>
    <string name="list_tab_text">list</string>
    <string name="map_tab_text">map</string>
    <string name="menu_search_filter">Filters</string>
    <string name="menu_room_detail_share">Share</string>
    <string name="menu_room_detail_report">Report room</string>
    <string name="menu_filters_clear_all">Clear all</string>
    <string name="email_info" translatable="false">info@badiapp.com</string>
    <string name="email_feedback" translatable="false">feedback@badiapp.com</string>
    <string name="email_report">report@badiapp.com</string>
    <string name="url_room_prefix" translatable="false">/room/</string>
    <string name="url_get_app" translatable="false">http://get.badiapp.com</string>
    <string name="permission_available_location">Location permission has been granted.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="permission_location_rationale">Location permission is needed to show the rooms in your current area.</string>
    <string name="permission_write_external_storage_rationale">Write external storage permission is needed to choose an image from the camera</string>
    <string name="permission_ok" translatable="false">OK</string>
    <string name="exception_message_generic">Whoops! There was an application error</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_unexpected_error">Whoops! There was an error</string>
    <string name="image_choose_input_method">Select an image from the camera or the gallery</string>
    <string name="message_uploading_image">Uploading image…</string>
    <string name="error_incorrect_password">Whoops! The password is incorrect.</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_list_room_no_pictures">You need to add at least one picture to upload a room</string>
    <string name="error_list_room_bills_included">Please select whether bills are included or not</string>
    <string name="error_list_room_availability_from">Please select when the room will become available</string>
    <string name="error_list_room_availability_to">Please select when the room will become unavailable</string>
    <string name="error_list_room_no_tenants">Please add all the people who live in the flat (include yourself)</string>
    <string name="error_list_room_no_type_bed_selected">Please select the type of bed available in the room</string>
    <string name="error_list_room_no_amenities">Please add at least one amenity</string>
    <string name="error_warning">Oh no!</string>
    <string name="error_authentication">Whoops! Something went wrong with your authentication. Please try again and, if the error persists contact support.</string>
    <string name="error_invalid_context">Whoops! You need to be logged-in to do that!</string>
    <string name="error_no_access">Whoops! You don’t have access here. Please, contact support.</string>
    <string name="error_resource_not_found">Whoops! Cannot find that resource. Please, contact support.</string>
    <string name="error_resource_already_confirmed_by_another_user">Whoops! That information is used by another user.</string>
    <string name="error_non_available">Whoops! That resource is non available. Please, contact support.</string>
    <string name="error_forbidden_operation">Whoops! You are not allowed to do that! Please, contact support.</string>
    <string name="error_invalid_params">Whoops! Some mandatory fields are missing. Try later or contact support.</string>
    <string name="error_invalid_record">Whoops! There was an error with one or more fields submitted. Try again or contact support.</string>
    <string name="error_invalid_facebook_token">Whoops! There was an unknown error with facebook. Try later or contact support.</string>
    <string name="error_invalid_sms_request">Whoops! Cannot process your verification request. Try later or contact support.</string>
    <string name="error_concurrent_verification_sms">You already requested an SMS verification. If you don’t receive a message within 5 minutes, try again.</string>
    <string name="error_unknown_sms_verification">Whoops! There was an unknown error with the sms verification service. Try later or contact support.</string>
    <string name="error_no_match_login_type">Whoops! Cannot find an account with this email and login type. Are you sure you didn’t register through a different provider?</string>
    <string name="error_email_not_found">Whoops! Couldn’t find any users with that email address.</string>
    <string name="error_email_already_exists">Whoops! Your email already exists.</string>
    <string name="error_facebook_login_exists">Whoops! This Facebook account is already being used by another account.</string>
    <string name="error_google_login_exists">Whoops! This Google account is already being used by another account.</string>
    <string name="error_unknown_exception">Whoops! There was an unknown error. Try later or contact support.</string>
    <string name="error_invalid_postal_code">Whoops! This postal code is invalid for the selected country.</string>
    <string name="error_invalid_account_number">Whoops! The bank account number is invalid. Please double check if its written correctly.</string>
    <string name="error_invalid_account_country">Whoops! The bank account country is invalid. Please check the bank account is from the country of your account.</string>
    <string name="error_no_match_password_confirmation">Whoops! It seems that the two passwords are not the same.</string>
    <string name="error_request_already_answered">Whoops! This request is already answered</string>
    <string name="error_request_non_archivable">Whoops! This request is no archivable</string>
    <string name="error_room_is_frozen">Whoops! This room can’t be updated</string>
    <string name="error_user_with_no_payment_data">Whoops! The payment data is missing</string>
    <string name="error_user_with_no_payout_data">Whoops! The payout data is missing</string>
    <string name="error_booking_proposal_in_progress">Whoops! You’ve already sent a booking request to this room. It’s not possible to send another one while you have one waiting for answer</string>
    <string name="error_cant_leave_chat">Whoops! It is not possible to leave the chat because there is a booking in common. If you still want to leave it contact support</string>
    <string name="error_cant_block_chat">Whoops! It is not possible to block the chat because there is a booking in common. If you still want to block it contact support</string>
    <string name="error_location_service">Temporary error: we cannot connect to our location service. Please, restart the app.</string>
    <string name="error_stripe_invalid_number">The card number is not a valid credit card number.</string>
    <string name="error_stripe_invalid_expiry_month">The card’s expiration month is invalid.</string>
    <string name="error_stripe_invalid_expiry_year">The card’s expiration year is invalid.</string>
    <string name="error_stripe_invalid_cvc">The card’s security code is invalid.</string>
    <string name="error_stripe_invalid_swipe_data">The card’s swipe data is invalid.</string>
    <string name="error_stripe_incorrect_number">The card number is incorrect.</string>
    <string name="error_stripe_expired_card">The card has expired.</string>
    <string name="error_stripe_incorrect_cvc">The card’s security code is incorrect.</string>
    <string name="error_stripe_incorrect_zip">The card’s zip code failed validation.</string>
    <string name="error_stripe_card_declined">The card was declined.</string>
    <string name="error_stripe_missing">There is no card on a customer that is being charged.</string>
    <string name="error_stripe_processing_error">An error occurred while processing the card.</string>
    <string name="ga_event_rate_app_bueh" translatable="false">Bueh</string>
    <string name="ga_event_rate_app_so_so" translatable="false">So-so</string>
    <string name="ga_event_rate_app_like_it" translatable="false">Like it</string>
    <string name="ga_event_rate_app_love_it" translatable="false">Love it</string>
    <string name="profile_years_old">%d years old</string>
    <string name="profile_other">Other</string>
    <string name="profile_language_arabic">Arabic</string>
    <string name="profile_language_indonesian">Indonesian</string>
    <string name="profile_language_chinese">Chinese</string>
    <string name="profile_language_czech">Czech</string>
    <string name="profile_language_danish">Danish</string>
    <string name="profile_language_german">German</string>
    <string name="filters_tag_tv" translatable="false">1</string>
    <string name="filters_tag_wifi" translatable="false">2</string>
    <string name="filters_tag_air_conditioner" translatable="false">3</string>
    <string name="filters_tag_parking" translatable="false">4</string>
    <string name="filters_tag_smokers_friendly" translatable="false">5</string>
    <string name="filters_tag_pet_allowed" translatable="false">6</string>
    <string name="filters_tag_elevator" translatable="false">7</string>
    <string name="filters_tag_heating" translatable="false">8</string>
    <string name="filters_tag_washing_machine" translatable="false">9</string>
    <string name="filters_tag_dryer" translatable="false">10</string>
    <string name="filters_tag_doorman" translatable="false">12</string>
    <string name="filters_tag_couples_accepted" translatable="false">13</string>
    <string name="filters_tag_furnished" translatable="false">14</string>
    <string name="filters_tag_pool" translatable="false">15</string>
    <string name="filters_tag_private_bathroom" translatable="false">16</string>
    <string name="filters_tag_terrace" translatable="false">17</string>
    <string name="filters_tag_window" translatable="false">18</string>
    <string name="filters_tag_dishwasher" translatable="false">19</string>
    <string name="filters_tag_wheelchair_friendly" translatable="false">20</string>
    <string name="amenities_tv">tv</string>
    <string name="amenities_wifi">wifi</string>
    <string name="amenities_air_conditioner">air conditioner</string>
    <string name="amenities_parking">parking</string>
    <string name="amenities_smokers_friendly">smokers friendly</string>
    <string name="amenities_pet_allowed">pets allowed</string>
    <string name="amenities_elevator">elevator</string>
    <string name="amenities_heating">heating</string>
    <string name="amenities_washing_machine">washing machine</string>
    <string name="amenities_dryer">dryer</string>
    <string name="amenities_doorman">doorman</string>
    <string name="amenities_couples_accepted">couples accepted</string>
    <string name="amenities_furnished">furnished</string>
    <string name="amenities_pool">pool</string>
    <string name="amenities_private_bathroom">private bathroom</string>
    <string name="amenities_balcony">balcony</string>
    <string name="amenities_exterior_view">exterior view</string>
    <string name="amenities_dish_washer">dish washer</string>
    <string name="amenities_wheelchair">wheelchair friendly</string>
    <string name="add_roommates_title">Add Badis</string>
    <string name="add_roommates_hint_search">Type the name here</string>
    <string name="add_roommates_whoops">Whoops!</string>
    <string name="add_roommates_no_roommate_found">It seems your Badi isn’t here</string>
    <string name="add_roommates_cannot_find_roommates">Can’t find your roommates above?</string>
    <string name="add_roommates_invite_roommates">Invite Roommates</string>
    <string name="add_roommates_save_changes">Save changes</string>
</resources>