<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.listroom.ListRoomRoommatesActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/button_close"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="top|start"
                android:src="@drawable/ic_close_green"
                android:scaleType="fitCenter"
                style="@style/Widget.AppCompat.ActionButton" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="15dp"
                android:text="@string/add_roommates_title"
                android:textColor="@color/green_500"
                android:textSize="20sp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/edit_text_autocomplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="5dp"
                android:layout_below="@id/text_title"
                android:drawableStart="@drawable/ic_search_green"
                android:drawableLeft="@drawable/ic_search_green"
                android:drawablePadding="5dp"
                android:maxLines="1"
                android:hint="@string/add_roommates_hint_search"
                android:textColorHint="@color/grey_500"
                android:textColor="@color/green_500"/>

            <ImageView
                android:id="@+id/button_clear_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignTop="@id/edit_text_autocomplete"
                android:layout_alignBottom="@id/edit_text_autocomplete"
                android:layout_alignEnd="@id/edit_text_autocomplete"
                android:layout_alignRight="@id/edit_text_autocomplete"
                android:src="@drawable/ic_clear_green"
                android:visibility="gone"/>

        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_autocomplete_roommates"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="@layout/item_roommate"/>

        <LinearLayout
            android:id="@+id/layout_empty_roommates"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:gravity="center|top"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_roommates_whoops"
                android:textColor="@color/grey_500"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_roommates_no_roommate_found"
                android:textColor="@color/grey_500"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_invite_roommates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_roommates_cannot_find_roommates"
                android:textColor="@color/grey_500"
                android:textSize="@dimen/text_size_info"
                android:gravity="center"/>

            <TextView
                android:id="@+id/text_invite_roommates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="14dp"
                android:text="@string/add_roommates_invite_roommates"
                android:textSize="@dimen/text_size_info"
                android:textColor="@color/green_500"
                android:gravity="center"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_add_roommates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_match_parent_button"
            android:text="@string/add_roommates_save_changes"
            android:padding="20dp"
            android:background="@drawable/button_background_green"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
